cmake_minimum_required(VERSION 2.8)

project(bind)

set(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)

set(BOOSTDIR "$ENV{BOOSTDIR}")
IF (BOOSTDIR STREQUAL "") 
	set(BOOST_INCLUDE_DIRS "/usr/local/boost_1_58_0")
	set(BOOST_LIBRARIES_DIRS "/usr/local/boost_1_58_0")
ELSE()
	set(BOOST_INCLUDE_DIRS "${BOOSTDIR}/include")
	set(BOOST_LIBRARIES_DIRS "${BOOSTDIR}/lib")
ENDIF()

IF(NOT EXISTS ${BIN_DIR})
	FILE(MAKE_DIRECTORY ${BIN_DIR})
ENDIF(NOT EXISTS ${BIN_DIR})

set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)

set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -g")
#set(CMAKE_CXX_FLAGS "-std=c++1y ${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})

INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS}) 
ADD_EXECUTABLE(bind src/main) 
TARGET_LINK_LIBRARIES(bind ${BOOST_LIBRARIES})

